--- a/pages/paint-detail/paint-detail.wxml
+++ b/pages/paint-detail/paint-detail.wxml
@@ -7,7 +7,7 @@
          <!-- <image src="{{paint.imageUrls+getImgBig}}" alt="" mode="aspectFill" style="height:{{windowWidth}}px" /> -->
          <view class="img-mask" wx:if="{{ showOrderPanel }}" bindtap="closePanel" ></view>  
       <swiper indicator-dots="true" style='width:{{ windowWidth }}px;height:{{ windowWidth }}px;' >
-        <block wx:for="{{ paint.imageUrls }}" wx:key='{{ index }}'>
+        <block wx:for="{{ paint.urlArray }}" wx:key='{{ index }}'>
           <swiper-item>
             <image src="{{ item }}" class="slide-image" style='width:{{ windowWidth }}px;height:{{ windowWidth }}px;' />
           </swiper-item>
@@ -16,16 +16,16 @@
     </view>
     <view class="detail-info">
         
-        <view class='tit'>{{ paint.title }}</view>
-        <view class="des">{{ paint.content }}</view>
+        <view class='tit'>{{ paint.goodTypeName }}</view>
+        <view class="des">{{ paint.name }}</view>
         <view class="price-info">
-            <text class="hnbprice">{{ paint.hnbPrice }}<text>HNB</text></text>
-            <text class="rmbprice">/ {{ paint.rmbPrice }}RMB</text>
+            <text class="hnbprice">{{ paint.coinPrice }}<text>HNB</text></text>
+            <text class="rmbprice">/ {{ paint.price }}RMB</text>
             <text class="style">{{ paint.isShipping ? "包邮" : "" }}</text>
         </view>
         <view class="weui-flex fs30 color999">
-          <view class='weui-flex__item txtLeft'>{{ paint.people }}人已付款</view>
-          <view class='weui-flex__item txtCenter'>{{ paint.numbs }}库存</view>
+          <view class='weui-flex__item txtLeft'>{{ paint.sales }}人已付款</view>
+          <!-- <view class='weui-flex__item txtCenter'>{{ paint.numbs }}库存</view> -->
           <view class='weui-flex__item txtRight'>{{ paint.address }}</view>
         </view>
     </view> 
@@ -52,26 +52,23 @@
 
     <view class="top weui-flex">
         <view class="left">
-            <image src="{{ paint.imageUrls[0] }}" alt="" mode="aspectFill" />
+            <image src="{{ paintSelected.imageUrl }}" alt="" mode="aspectFill" />
         </view>
         <view class="weui-flex__item">
           <view class='price-info'> 
-            <text class="hnbprice">{{ paint.hnbPrice }}<text>HNB</text></text>
-            <text class="rmbprice">/ {{ paint.rmbPrice }}RMB</text>
-            <view class='fs30 lineClamp2'>{{ paint.title }}</view>
+            <text class="hnbprice">{{ paintSelected.coinPrice }}<text>HNB</text></text>
+            <text class="rmbprice">/ {{ paintSelected.price }}RMB</text>
+            <view class='fs30 lineClamp2'>{{ paint.name }}</view>
             <view class='fs30'>选择 颜色分类</view>
+            <view class='' hidden='{{ !paintSelected.inventory }}'>{{ paintSelected.inventory }}</view>
           </view> 
         </view>
     </view>
     <view class="panel-scroll">
         <view class="size-pick">
             <view class="title" style="border-top:1px solid #f5f5f5">颜色分类</view>
-            <text wx:for="{{ paint.paintSizes }}" wx:key='{{ index }}' wx:item="{{ item }}" class="{{ item.isSelect?'size-select':''}}" bindtap="selectTab" data-index="{{ index }}" >{{ item.name }}</text>
+            <text wx:for="{{ paintSizes }}" wx:key='{{ index }}' class="{{ item.isSelect?'size-select':''}}" bindtap="selectTab" data-index="{{ index }}" >{{ item.name }}</text>
         </view>
-        <!-- <view class="size-pick">
-            <view class="title">绘画风格</view>
-            <text wx:for="{{paintStyleList}}" wx:key='{{ index }}' wx:item="{{item}}" class="{{item.isSelect?'size-select':''}}" bindtap="selectTab" data-index="{{index}}" data-type="paintStyleList">{{item.name}}</text>
-        </view> -->
         <view class="order-item">
             <text>购买数量</text>
             <view class="right">
@@ -80,23 +77,6 @@
                 <image src="{{ plusBtnImg }}" alt="" bindtap="btnHover" data-type="plusBtnImg" />
             </view>
         </view> 
-        <!-- <view class="order-item order-item-input">
-            <text>姓名</text>
-            <view class="input-right">
-                <input type="text" placeholder="必填：收货人姓名" placeholder-style="color:#ccc" value="{{order.contactor}}" bindblur="setFrom" data-name="contactor"/>
-            </view>
-        </view> -->
-        <!-- <view class="order-item order-item-input">
-            <text>手机</text>
-            <view class="input-right">
-                <input type="text" placeholder="必填：收货人电话" placeholder-style="color:#ccc" value="{{order.phone}}" bindblur="setFrom" data-name="phone"/>
-            </view>
-        </view> -->
-        <!-- <view class="order-upload">
-            <text>上传照片</text>
-            <image src="../../images/add-pic@2x.png" alt="" wx:if="{{!sourceImageUrl}}" bindtap="uploadImg" />
-            <image src="{{sourceImageUrl}}" alt="" wx:if="{{sourceImageUrl}}" bindtap="uploadImg" />
-        </view> -->
     </view>
 </view>
 <template is="toast" data="{{showTips,tipsInfo}}"></template>
