--- a/pages/order-confirm/order-confirm.wxml
+++ b/pages/order-confirm/order-confirm.wxml
@@ -3,24 +3,27 @@
 <!-- <navbar navbar-title="{{ navbarTitle }}" /> -->
 
 <view class="container bg-default {{ isIphoneX ? 'fix-iphonex-navbar' : '' }}">
-    <view class="tp-tit">
-        <text>请填写收货地址：{{order.contactor}} {{order.phone}}</text>
+    <view class="tp-tit" bindtap='bindgetaddresstap'>
+        <text>收货人：{{ myaddress.address ? "" : "点击获取" }}</text>
+        <text class='user-text'>{{ myaddress.userName }} {{ myaddress.telNumber }} </text>
+        <text class='address-text'> {{ myaddress.address }} </text>
+        <image src="../../images/right.png" alt="" class="right-icon" />
         <view class='tp-tit-bottom-border'></view>
     </view>
     <view class="order-detail">
         <view class='top'>
             <image class='artistlogo' src='../../images/hnlogo_p.png'></image>
-            <view>画你官方直营{{paint.artistProfile.nickname}}</view>
+            <view>画你官方直营</view>
         </view>
         <view class='bottom weui-flex'>
-            <view><image class='mainImg' src="{{paint.imageUrls}}" alt="" mode="aspectFill" /></view>
+            <view><image class='mainImg' src="{{ paint.imageUrl }}" alt="" mode="aspectFill" /></view>
             <view class="right weui-flex__item">
                 <view class="des">
-                    范冰冰同款OPPO R11手机壳范冰冰同款OPPO R11手机壳范冰冰同款OPPO R11手机壳{{paint.artistProfile.nickname}}
+                    {{ goodName }}
                 </view>
-                <view class="options">颜色分类：R11 巴巴爸爸 送挂绳 {{paint.prodStyle}}{{order.numOfPeople}}</view>
-                <view class="price"> <text class='hnb-text'><text>233</text>HNB </text> / 240RMG </view>
-                <view class='numb'>x1</view>
+                <view class="options">分类: {{ paint.color }} {{ paint.volume }} {{ paint.weight }} {{ paint.sieze }}</view>
+                <view class="price"> <text class='hnb-text'><text>{{ paint.coinPrice }}</text>积分 </text> / {{ paint.price }}RMG </view>
+                <view class='numb'>x{{ theNumber }}</view>
             </view>
         </view>
     </view>
@@ -28,9 +31,9 @@
         <view class="more-item">
             购买数量
             <view class="right">
-                <image src="../../images/add@2x.png" alt="" bindtap="btnHover" data-type="minusBtnImg" />
-                <input type="number" value="1" bindblur="setFrom" data-name="numOfPeople" disabled/>
-                <image src="../../images/min@2x.png" alt="" bindtap="btnHover" data-type="plusBtnImg" />
+                <!-- <image src="../../images/min@2x.png" alt="" bindtap="btnHover" data-type="plusBtnImg" /> -->
+                <input type="number" value="{{ theNumber }}" bindblur="setFrom" data-name="numOfPeople" disabled/>
+                <!-- <image src="../../images/add@2x.png" alt="" bindtap="btnHover" data-type="minusBtnImg" /> -->
             </view>
         </view>
         <view class="more-item weui-flex">
@@ -42,6 +45,7 @@
         <view class="more-item" bindtap="chooseCoupon">
             配送方式
             <view class="item-note">
+                快递 免邮
                 <text wx:if="{{order.couponId&&order.couponType&&paintPrice.use}}">-￥{{order.couponMinus}}</text>
                 <text wx:if="{{order.couponId&&!order.couponType}}">快递 免邮</text>
                 <image src="../../images/right.png" alt="" class="right-icon" />
@@ -52,27 +56,27 @@
           <image class='right-icon' src='{{ isReadProtocol ? "../../images/checked@2x.png" : "../../images/check@2x.png" }}' bindtap='bindCheckReadProtocolTap'></image>
         </view> -->
         <view class="total">
-            共1件商品 小计：
-            <view class="price"> <text class='hnb-text'><text>233</text>HNB </text> / 240RMG </view>
+            共{{ theNumber }}件商品 小计：
+            <view class="price"> <text class='hnb-text'><text>{{ totalCoin }}</text>积分 </text> / {{ totalPrice }}RMG </view>
         </view>
 
         <view class='pay-title'>支付方式</view>
-        <view class='weui-flex pay-item' wx:for='{{ payList }}' wx:key='{{ index }}'>
+        <view class='weui-flex pay-item' wx:for='{{ payList }}' wx:key='{{ index }}' id='{{  index }}' bindtap='bindPayTypeSelectTap'>
           <view><image class='left-icon' src='../../images/{{ item.selected ? "select" : "unselect" }}.png'></image></view>
           <view class='weui-flex__item'>
             <view class='name'>{{ item.name }}</view>
           </view>
-          <view class='pay-btn' wx:if='{{ index == 0 }}'>充值</view>
+          <view class='pay-btn' wx:if='{{ index == 0 }}' bindtap='bindWalletTap'>充值</view>
         </view>
     </view>
 
 </view>
+
 <view class="draw-footer {{ isIphoneX ? 'draw-footer-fix-iphonex' : '' }}">
-    <view class="order-confirm weui-flex {{ isIphoneX ? 'confirm-btn-fix-iphonex' : '' }}" bindtap="orderConfirm">
-        <view class='left-btn weui-flex__item'> <text>免运费</text> 合计 233HNCS</view>
-        <view class='pay-now-btn'>立即支付</view>
+    <view class="order-confirm weui-flex {{ isIphoneX ? 'confirm-btn-fix-iphonex' : '' }}" bindtap="">
+        <view class='left-btn weui-flex__item'> <text>免运费</text> 合计 {{ paint.coinPrice }}积分</view>
+        <view class='pay-now-btn' bindtap='bindCreateOrderTap'>立即下单</view>
     </view>
 </view>
-<template is="toast" data="{{showTips,tipsInfo}}">
 
-</template>
+<template is="toast" data="{{showTips,tipsInfo}}"></template>
