--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,12 +5,12 @@
 
 <template is="blank" wx:if="{{ !goodsTypes.length }}"></template> 
 
-<view class="container bg-default">
+<view class="container bg-default" wx:else >
 
   <swiper indicator-dots="false" previous-margin='50rpx' next-margin='50rpx'>
   <block wx:for="{{ imgUrls }}" wx:key="{{ index }}">
     <swiper-item>
-      <image src="{{ item }}" class="slide-image" width="{{ windowWidth-50 }}px" height="150"/>
+      <image mode='aspectFit' src="{{ item.bannerUrl }}" class="slide-image" width="{{ windowWidth-50 }}px" height="150"/>
     </swiper-item>
   </block>
   </swiper> 
@@ -24,16 +24,16 @@
     <scroll-view scroll-x >
       <view class='x-item' style='{{ bigList.types == "wide" ? "height:372rpx;width:674rpx;" : "" }}' wx:for='{{ bigList.goodsList }}' wx:key='{{ index }}' id='{{ item.id }}' bindtap="bindPaintDetail">
         <view class='img-view' style='{{ "background-image: url(" + item.urlArray[0] + ");" }}{{ bigList.types == "wide" ? "height:372rpx;width:674rpx;" : "" }}'>
-          <view class='name'>
+          <!-- <view class='name'>
             <view class='types'>{{ item.shortName }}</view>
             <view class='fs30'>{{ bigList.goodTypeName }}</view>
-          </view>
+          </view> -->
         </view>
         <view class='des-view'>
           <view class='des'>{{ item.name }}</view>
           <view class='weui-flex'>
-            <view class='weui-flex__item price'>{{ item.coinPrice }} HNB<text class='fs25'></text> </view>
-            <view class='weui-flex__item bz'>{{ item.note }}仅限HNB支付</view>  
+            <view class='weui-flex__item price'>{{ item.coinPrice }} 积分<text class='fs25'></text> </view>
+            <view class='weui-flex__item bz'>{{ item.note }}仅限积分兑换</view>  
           </view>
         </view>
       </view>
@@ -43,39 +43,6 @@
 
 </view>
 
-
-
-
-
-
-
-
-
-<!-- <view class="container bg-default" wx:if="{{paintList.length}}">
-    <scroll-view class="classify-nav" style='background-color:{{ navbarBgColor }};{{ isIphoneX ? "top:108px!important;" : "" }}' scroll-x scroll-into-view='{{ scrollIntoView }}' scroll-with-animation='true'>
-        <view class="nav-item {{ selectTab == index ? (selectTab == 0 ? 'item-select-first' : 'item-select') : (selectTab == 0 ? 'item-first' : '')}} {{ selectTab == 0 ? '' : '' }}" style='{{ index == 0 ? "margin-left:60rpx;" : "" }}' wx:for="{{navList}}"  wx:key='{{ index }}' bindtap="selectTab" id='{{ "to" + index }}'  data-name='{{ item.name }}' data-index="{{index}}">
-            {{item.name}}
-        </view>
-    </scroll-view>
-    <scroll-view class="classify-content" style='{{ isIphoneX ? "bottom:-80px!important;height:calc(100% - 135rpx)!important;" : "" }}' scroll-y="true" bindscrolltolower="handleLoadMore" bindscroll="handleScroll" lower-threshold="100" scroll-into-view="{{pageTop}}">
-        <view class="more-paint" id="pageTop">
-            <view class="item" style="width:{{windowWidth-60}}px;" wx:for="{{paintList}}" wx:key='{{ index }}' bindtap="paintDetail" data-id="{{item.prod.id}}">
-                <view class='browse-num'>{{ item.prod.viewCount }}人浏览了</view>
-                <image src="{{item.prod.imageUrls+getImgMid}}" alt="" mode="aspectFill" style="height:{{windowWidth-60}}px" />
-                <view class="tit">
-                    {{item.prod.content}}
-                </view>
-                <view class="price">
-                    ¥{{item.minPrice||0}}
-                    <text class='painttag' style='color:{{ item.prod.prodColor }}'>#{{ item.prod.prodStyle }}</text>
-                </view>
-            </view>
-        </view>
-        <view style="clear:both;height:30rpx;background:none"></view>
-    </scroll-view>
-</view> -->
-
 <template is="gotopbtn" data="{{ gotopHidden }}"></template>
-
-<template is="toast" data="{{showTips,tipsInfo}}"></template>
+<template is="toast" data="{{ showTips,tipsInfo }}"></template>
 
