--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,6 +9,10 @@ page{
 swiper {
     padding: 20rpx 0;
 }
+.slide-image {
+    width: 100%;
+    height: 100%;
+}
 .container{
     height: 100%;
 }
