--- a/pages/paint-detail/paint-detail.wxml
+++ b/pages/paint-detail/paint-detail.wxml
@@ -9,19 +9,19 @@
       <swiper indicator-dots="true" style='width:{{ windowWidth }}px;height:{{ windowWidth }}px;' >
         <block wx:for="{{ paint.urlArray }}" wx:key='{{ index }}'>
           <swiper-item>
-            <image src="{{ item }}" class="slide-image" style='width:{{ windowWidth }}px;height:{{ windowWidth }}px;' />
+            <image mode='aspectFit' src="{{ item }}" class="slide-image" style='width:{{ windowWidth }}px;height:{{ windowWidth }}px;' />
           </swiper-item>
         </block>
       </swiper>
     </view>
     <view class="detail-info">
         
-        <view class='tit'>{{ paint.goodTypeName }}</view>
-        <view class="des">{{ paint.name }}</view>
+        <view class='tit'>{{ paint.name }}</view>
+        <view class="des">{{ paint.shortName }}</view>
         <view class="price-info">
-            <text class="hnbprice">{{ paint.coinPrice }}<text>HNB</text></text>
+            <text class="hnbprice">{{ paint.coinPrice }}<text>积分</text></text>
             <text class="rmbprice">/ {{ paint.price }}RMB</text>
-            <text class="style">{{ paint.isShipping ? "包邮" : "" }}</text>
+            <text class="style">包邮{{ paint.isShipping ? "包邮" : "" }}</text>
         </view>
         <view class="weui-flex fs30 color999">
           <view class='weui-flex__item txtLeft'>{{ paint.sales }}人已付款</view>
@@ -31,7 +31,9 @@
     </view> 
     <view class="more-paint">
         <view class="title">宝贝详情</view>
-        <view></view>
+        <view class='detail-img'>
+          <image mode='aspectFit' src='{{ paint.infoUrl }}'></image>
+        </view>
     </view> 
 </view>
 <!-- 下单 footer -->
@@ -56,24 +58,26 @@
         </view>
         <view class="weui-flex__item">
           <view class='price-info'> 
-            <text class="hnbprice">{{ paintSelected.coinPrice }}<text>HNB</text></text>
+            <text class="hnbprice">{{ paintSelected.coinPrice }}<text>积分</text></text>
             <text class="rmbprice">/ {{ paintSelected.price }}RMB</text>
             <view class='fs30 lineClamp2'>{{ paint.name }}</view>
-            <view class='fs30'>选择 颜色分类</view>
-            <view class='' hidden='{{ !paintSelected.inventory }}'>{{ paintSelected.inventory }}</view>
+            <view class='fs30'>
+              选择 分类
+              <text class='kctxt' hidden='{{ !paintSelected.inventory }}'>{{ paintSelected.inventory }}库存</text>
+            </view>
           </view> 
         </view>
     </view>
     <view class="panel-scroll">
         <view class="size-pick">
-            <view class="title" style="border-top:1px solid #f5f5f5">颜色分类</view>
-            <text wx:for="{{ paintSizes }}" wx:key='{{ index }}' class="{{ item.isSelect?'size-select':''}}" bindtap="selectTab" data-index="{{ index }}" >{{ item.name }}</text>
+            <view class="title" style="border-top:1px solid #f5f5f5">分类</view>
+            <text wx:for="{{ paintSizes }}" wx:key='{{ index }}' class="{{ item.selected?'size-select':''}}" bindtap="selectTab" data-index="{{ index }}" >{{ item.color }} {{ item.volume }} {{ item.weight }} {{ item.sieze }}</text>
         </view>
         <view class="order-item">
             <text>购买数量</text>
             <view class="right">
                 <image src="{{ minusBtnImg }}" alt="" bindtap="btnHover" data-type="minusBtnImg" />
-                <input type="number" value="{{ order.numOfPeople }}" bindblur="setFrom" data-name="numOfPeople" disabled/>
+                <input type="number" value="{{ theNumber }}" bindblur="setFrom" data-name="numOfPeople" disabled/>
                 <image src="{{ plusBtnImg }}" alt="" bindtap="btnHover" data-type="plusBtnImg" />
             </view>
         </view> 
