--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -27,7 +27,7 @@ page {
     border: 2px solid white;
     margin-left: 40rpx;
     margin-right: 20rpx;
-    vertical-align: top;
+    vertical-align: middle;
 }
 .profile .btn-login{
     width:160rpx;
@@ -60,6 +60,10 @@ page {
 .profile .info view {
     font-size: 38rpx;
 }
+.profile .info button {
+    font-size:30rpx;
+    background:none;
+}
 
 .mywallet-view {
     background: -webkit-linear-gradient(left, #FFAAB0, #FDC8CC);
@@ -70,6 +74,7 @@ page {
     float:right;
     padding:10rpx 30rpx;
     margin-top: 20rpx;
+    line-height:60rpx;
 }
 .mywallet-view .left-icon { 
     width: 56rpx;
@@ -81,10 +86,6 @@ page {
     width: 100%;
     height: 100%;
     float: left;
-    margin-top: 5rpx;
-}
-.mywallet-view .right-item {
-    line-height: 130%;
 }
 .item {
     position: relative;
@@ -202,6 +203,11 @@ page {
     padding: 25rpx;
     font-size: 28rpx;
     color: #333;
+}
+.copoun-nav .right-txt {
+    position:absolute;
+    right:70rpx;
+    top:47rpx;
 }
 .copoun-nav .coupon{
     width: 40rpx;
