--- a/pages/paint-detail/paint-detail.wxss
+++ b/pages/paint-detail/paint-detail.wxss
@@ -104,7 +104,7 @@ page {
 }
 .more-paint .detail-img image {
     width: 100%;
-    height: 600rpx;
+    /* height: 600rpx; */
 }
 
 .draw-footer .left {
